--- a/core/bin/pom.xml
+++ b/core/bin/pom.xml
@@ -5,36 +5,41 @@
     <artifactId>food2Eat</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>web</artifactId>
-  <packaging>war</packaging>
+  <artifactId>core</artifactId>
+  <packaging>ejb</packaging>
   
   <dependencies>
-  
   <dependency>
-	<groupId>org.primefaces</groupId>
-	<artifactId>primefaces</artifactId>
-	<version>6.2</version>
-</dependency>
-   <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
    </dependency>
- 
-	<dependency>
+   
+   <dependency>
     		<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-annotations</artifactId>
     		<version>2.8.11</version>
     		<scope>provided</scope>
    </dependency>
-	
-	<dependency>
-	     <groupId>fr.afcepf.ai103</groupId>
-  		<artifactId>core</artifactId>
- 		 <version>0.0.1-SNAPSHOT</version>
- 		 <scope>provided</scope>
-	</dependency>
   </dependencies>
+  
+   <build>
+    <plugins> 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-ejb-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+          <!-- 
+        <archive>
+            <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
+          </archive>
+         -->
+        <ejbVersion>3.2</ejbVersion>
+        </configuration>
+      </plugin>
+  </plugins>
+  </build>
   
 </project>
